--- a/package.json
+++ b/package.json
@@ -8,14 +8,19 @@
   ],
   "license": "MIT",
   "dependencies": {
+    "@types/better-sqlite3": "^7.4.1",
+    "@types/sqlite3": "^3.1.7",
+    "better-sqlite3": "^7.4.5",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "joi": "^17.4.2",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "rotating-file-stream": "^3.0.2"
   },
   "devDependencies": {
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
+    "@types/morgan": "^1.9.3",
     "@types/node": "^14.0.9",
     "nodemon": "^2.0.15",
     "prettier": "^2.4.1",
@@ -26,8 +31,8 @@
   },
   "scripts": {
     "comp": "tsc",
-    "start": "node ./dist/GPAO.js",
-    "dev": "nodemon ./src/GPAO.ts",
+    "start": "node ./dist/index.js",
+    "dev": "nodemon ./src/index.ts",
     "tslint": "tslint --project tsconfig.json",
     "prettier:base": "prettier --parser typescript",
     "prettier:check": "npm run prettier:base -- --check \"./src/**/*.{ts,tsx}\"",
